Update Firebase deployment workflow and modify HTML files
- Modify firebase-deploy.yml for improved deployment process
- Redirect index.html to the photo upload page
- Update upload_photo.html with Firebase Storage integration for photo uploads

--- a/public/upload_photo.html
+++ b/public/upload_photo.html
@@ -13,12 +13,12 @@
     <script>
       // Your Firebase Config
       const firebaseConfig = {
-        apiKey: "YOUR_API_KEY",
-        authDomain: "YOUR_AUTH_DOMAIN",
-        projectId: "YOUR_PROJECT_ID",
-        storageBucket: "YOUR_STORAGE_BUCKET",
-        messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-        appId: "YOUR_APP_ID"
+        apiKey: "AIzaSyCJrmIVLivBiyeauakGFDR4rEUBppSGd5E",
+        authDomain: "botez---photos-upload-qr-code.firebaseapp.com",
+        projectId: "botez---photos-upload-qr-code",
+        storageBucket: "botez---photos-upload-qr-code.appspot.com",
+        messagingSenderId: "1065245386844",
+        appId: "1:1065245386844:web:46f71f562e468cb47f1e99",
       };
 
       // Initialize Firebase
