--- a/public/upload_photo.html
+++ b/public/upload_photo.html
@@ -1,14 +1,92 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Upload Photo</title>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-storage.js"></script>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        margin: 0;
+        padding: 0;
+      }
+
+      h2 {
+        color: #333;
+        text-align: center;
+        font-size: 1.5rem;
+      }
+
+      .upload-container {
+        background-color: white;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        width: 100%;
+        max-width: 400px;
+      }
+
+      .file-input-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 20px;
+      }
+
+      input[type="file"] {
+        padding: 10px;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        width: 100%;
+      }
+
+      button {
+        margin-top: 20px;
+        padding: 10px 20px;
+        background-color: #007bff;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        width: 100%;
+        font-size: 1rem;
+      }
+
+      button:hover {
+        background-color: #0056b3;
+      }
+
+      @media (max-width: 600px) {
+        h2 {
+          font-size: 1.2rem;
+        }
+
+        button {
+          font-size: 0.9rem;
+        }
+
+        .upload-container {
+          padding: 15px;
+        }
+      }
+    </style>
   </head>
   <body>
-    <h2>Upload a Photo</h2>
-    <input type="file" id="fileInput" />
-    <button onclick="uploadFile()">Upload</button>
+    <div class="upload-container">
+      <h2>Upload a Photo</h2>
+      <div class="file-input-container">
+        <input type="file" id="fileInput" />
+        <button onclick="uploadFile()">Upload</button>
+      </div>
+    </div>
 
     <script>
       // Your Firebase Config
@@ -31,11 +109,14 @@
         const storageRef = storage.ref('uploads/' + file.name);
 
         // Upload the file
-        storageRef.put(file).then((snapshot) => {
-          alert('File uploaded successfully!');
-        }).catch((error) => {
-          console.error('Upload failed:', error);
-        });
+        storageRef
+          .put(file)
+          .then((snapshot) => {
+            alert("File uploaded successfully!");
+          })
+          .catch((error) => {
+            console.error("Upload failed:", error);
+          });
       }
     </script>
   </body>
