Add upload progress feedback and success/error messages for file uploads

--- a/public/upload_photo.html
+++ b/public/upload_photo.html
@@ -89,7 +89,7 @@
     </div>
 
     <script>
-      // Your Firebase Config
+      // Firebase Config
       const firebaseConfig = {
         apiKey: "AIzaSyBBBILoBkKNTp6M8m8PO-tMgthx__3YB1U",
         authDomain: "photo-upload-qr.firebaseapp.com",
@@ -103,35 +103,48 @@
       const app = firebase.initializeApp(firebaseConfig);
       const storage = firebase.storage();
 
-     // Upload File Function
-      function uploadFile() {
-        const file = document.getElementById('fileInput').files[0];
-        if (!file) {
-          document.getElementById('statusMessage').textContent = 'Please select a file.';
-          return;
-        }
+// Upload File Function
+function uploadFile() {
+      const file = document.getElementById('fileInput').files[0];
+      const progressBar = document.getElementById('progressBar');
+      const statusMessage = document.getElementById('statusMessage');
 
-        const storageRef = storage.ref('uploads/' + file.name); // Reference the storage path
-
-        const uploadTask = storageRef.put(file); // Upload the file
-
-        // Track the progress and completion of the upload
-        uploadTask.on('state_changed',
-          (snapshot) => {
-            const progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
-            document.getElementById('statusMessage').textContent = 'Upload is ' + progress.toFixed(0) + '% done';
-          },
-          (error) => {
-            console.error('Upload failed:', error);
-            document.getElementById('statusMessage').textContent = 'Upload failed.';
-          },
-          () => {
-            uploadTask.snapshot.ref.getDownloadURL().then((downloadURL) => {
-              document.getElementById('statusMessage').textContent = 'Upload successful! File available at: ' + downloadURL;
-            });
-          }
-        );
+      if (!file) {
+        statusMessage.textContent = 'Please select a file.';
+        return;
       }
+
+      // Reset progress bar and status message
+      progressBar.style.width = '0%';
+      statusMessage.textContent = '';
+
+      const storageRef = storage.ref('uploads/' + file.name); // Reference to Firebase Storage
+
+      // Start upload
+      const uploadTask = storageRef.put(file);
+
+      // Track the progress and completion of the upload
+      uploadTask.on('state_changed',
+        (snapshot) => {
+          // Calculate the upload progress
+          const progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
+          progressBar.style.width = progress + '%';
+          progressBar.textContent = progress.toFixed(0) + '%';
+          statusMessage.textContent = `Uploading... ${progress.toFixed(0)}%`;
+        },
+        (error) => {
+          // Handle errors
+          console.error('Upload failed:', error);
+          statusMessage.textContent = 'Upload failed. Please try again.';
+        },
+        () => {
+          // On successful upload, get the download URL
+          uploadTask.snapshot.ref.getDownloadURL().then((downloadURL) => {
+            statusMessage.textContent = `Upload successful! File available at: ${downloadURL}`;
+          });
+        }
+      );
+    }
     </script>
   </body>
 </html>
