--- a/public/upload_photo.html
+++ b/public/upload_photo.html
@@ -19,7 +19,7 @@
   <div class="upload-container">
     <h2>Upload Your Photos</h2>
     <div class="file-input-container">
-      <input type="file" id="fileInput" multiple />
+      <input type="file" id="fileInput" accept="image/*,video/*" multiple />
       <button onclick="uploadFiles()">Upload</button>
     </div>
     <div class="progress-container">
